# foot

./: CMakeLists.txt  LICENSE  README.md  foot.cpp  foot.h
.github/workflows/: codeql.yml
